// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Del checkGrammar=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkGrammar=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkHighlight=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkHighlight=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkSpaces=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkSpaces=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del className="my-classname" 1`] = `
<del
  className="uu5-bricks-del my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del content="This is Content from ContentMixin" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</del>
`;

exports[`UU5.Bricks.Del content=12345 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</del>
`;

exports[`UU5.Bricks.Del controlled=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del controlled=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del default props 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del disabled=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del disabled=true 1`] = `
<del
  className="uu5-bricks-del uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</del>
`;

exports[`UU5.Bricks.Del dynamic=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del dynamic=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del example docKit UU5.Bricks.Del render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is "
  />
  <Del
    id="uuID02"
    key="uuID02"
  >
    deleted
  </Del>
  <UU5.Common.TextCorrectorContextConsumer
    key="2"
    text="text"
  />
</p>
`;

exports[`UU5.Bricks.Del hidden=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del hidden=true 1`] = `
<del
  className="uu5-bricks-del uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del id="myId" 1`] = `
<del
  className="uu5-bricks-del"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del ignoreHTML=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del ignoreHTML=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del mainAttrs=undefined 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del name="myName" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del noIndex=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del noIndex=true 1`] = `
<del
  className="uu5-bricks-del uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del selected=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del selected=true 1`] = `
<del
  className="uu5-bricks-del uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del style="padding:8px; borderRadius: 2px" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Del style={"backgroundColor":"red","color":"blue"} 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Del textCorrector=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del textCorrector=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del tooltip="My Tooltip" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
